--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,7 +1,6 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/onebook/public_html/crm_clone
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
+    - export DEPLOYPATH=/home/onebook/public_html/crm_clone/
+    - /bin/cp -R * $DEPLOYPATH
     
